# KOV-Ray

./: Cargo.toml  README.md  ast.txt
scripts/: cornel_box.kov  random_balls.kov  test.kov
src/: ast.rs  interpreter.rs  lib.rs  main.rs  parser.rs
src/ast/: camera.rs  config.rs  expression.rs  material.rs  object.rs  statement.rs  texture.rs
src/interpreter/: expression.rs  funcs.rs  object.rs  statement.rs  value.rs
src/parser/: expression.rs  material.rs  object.rs  statement.rs  texture.rs
